@@ -67,8 +67,9 @@ program test_lithot
   call ConfigRead(fname,config)
 
   ! initialise GLIDE
+  call glide_config(model,config)
   call simple_initialise(climate,config)
-  call glide_initialise(model,config)
+  call glide_initialise(model)
   call CheckSections(config)
   ! fill dimension variables
   call glide_nc_fillall(model)
